# odhcp6c

./: .gitignore  CMakeLists.txt  README  README.md  harness-improvements.md  odhcp6c-example-script.sh  privsep-refactor.md
.github/workflows/: ci.yml  fuzz.yml  integration.yml
scripts/: devel-build.sh
src/: bfd.c  config.c  config.h  dhcpv6.c  odhcp6c.c  odhcp6c.h  odhcp6c_seccomp.h  ra.c  ra.h  rtnetlink.c  script.c  script.h  script_codec.c  script_common.c  script_internal.h  script_monitor.c  script_worker.c  seccomp.c  seccomp.h  ubus.c  ubus.h
tools/fuzz/: README.md  build.sh  gen_seed_corpus.sh  script_req_fuzz.c
tools/fuzz/regressions/: README.md
tools/harness/: Dockerfile  Dockerfile.debian  Dockerfile.openwrt  README.md  run-scenario.sh  seccomp-syscall-report.sh  stub-script.sh
tools/harness/lib/: assert.sh  backend_odhcpd.sh  backend_scapy.sh  common.sh  trace.sh  ubus.sh
tools/harness/scenarios/abnormal-exit/: scenario.sh
tools/harness/scenarios/captive-portal/: expect.txt  scenario.sh
tools/harness/scenarios/entry-formatting/: expect.txt  scenario.sh
tools/harness/scenarios/info-options/: expect.txt  scenario.sh
tools/harness/scenarios/malformed-dhcpv6/: scenario.sh
tools/harness/scenarios/pd-exclude/: expect.txt  scenario.sh
tools/harness/scenarios/prefix-renumber/: scenario.sh
tools/harness/scenarios/privsep-signals/: scenario.sh
tools/harness/scenarios/privsep-user/: scenario.sh
tools/harness/scenarios/ra-holdoff/: scenario.sh
tools/harness/scenarios/ra-options-edge/: expect.txt  scenario.sh
tools/harness/scenarios/ra-slaac/: expect.txt  scenario.sh
tools/harness/scenarios/release-on-stop/: scenario.sh
tools/harness/scenarios/renew-rebind/: scenario.sh
tools/harness/scenarios/s46-mape/: expect.txt  scenario.sh
tools/harness/scenarios/stateful-basic/: expect.txt  scenario.sh
tools/harness/scenarios/stateless-info/: expect.txt  scenario.sh
tools/harness/scenarios/ubus-reconnect/: scenario.sh
tools/harness/servers/: requirements.txt  scapy_server.py
